--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ main .one {
     z-index: -2;
 }
 
+main .one img {
+    border: 2px solid hsl(263, 77%, 66%);
+}
+
 main .one::before {
     content: url(images/bg-pattern-quotation.svg);
     position: absolute;
@@ -70,6 +74,10 @@ main .four {
 main .five {
     grid-area: five;
     background-color: hsl(219, 29%, 14%);
+}
+
+main .five img {
+    border: 2px solid hsl(263, 55%, 52%);
 }
 
 main .one h3, main .two h3, main .five h3 {
